--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,19 @@ button {
   height: 100px;
   border-radius: 50px;
   border: none;
-  background-color: grey;
+  background-color:hsl(0,0%,30%);
   color: white;
   font-size: 3rem;
   cursor: pointer;
   font-weight: bold;
+}
+body{
+  margin:0;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: hsl(0,0%,95%);
 }
 #keys {
   display: grid;
@@ -17,11 +25,29 @@ button {
 }
 #calculator {
   font-family: sans-serif;
-  background-color: black;
+  background-color : hsl(0,0%,15%);
   border-radius: 15px;
   max-width: 500px;
   overflow: hidden;
 }
 #display {
   width: 100%;
+  padding:20px;
+  font-size: 5rem;
+  text-align: left;
+  border: none;
+  background-color:hsl(0,0%,20%);
+  color:white;
+}
+button:hover{
+  background-color: hsl(0,0%,50%);
+}
+.operator-btn{
+  background-color: hsl(30,100%,55%);
+}
+.operator-btn:hover{
+  background-color: hsl(35,100%,65%);
+}
+.operator-btn:active{
+  background-color: hsl(35,100%,75%);
 }
